# centri

./: .env.example  .gitignore  CONTRIBUTING.md  FORK-NOTES.md  HANDOFF.md  LICENSE  README.md  STATE-AND-HANDOFF.md  VERIFY.md  docker-compose.yml
core/: .dockerignore  Dockerfile  conftest.py  pyproject.toml
core/src/centri/: __init__.py  accounts.py  app.py  artifacts.py  briefing.py  cli.py  config.py  consolidation.py  consolidation_llm.py  consolidation_prompt.py  context.py  context_cache.py  coordinator.py  curation.py  curation_replay.py  db.py  event_bus.py  jobs.py  letta_http.py  letta_memory_store.py  memory.py  (+13 more)
core/tests/: acp_fake_agent.py  test_acp_hand.py  test_bench.py  test_centri.py  test_cli_rebuild.py  test_consolidation.py  test_continuity.py  test_curation.py  test_curation_parity.py  test_curation_replay.py  test_embeddings.py  test_failover.py  test_hermes_integration.py  test_hot_cache.py  test_ingest_claude_code.py  test_ingest_cursor.py  test_ingest_generic.py  test_ingest_opencode.py  test_ingest_registry.py  test_judge.py  test_letta_http_store.py  test_llm_consolidation.py  test_memory_briefing.py  test_memory_graph.py  test_memory_identity.py  test_memory_injection.py  test_memory_store.py  test_model_router.py  test_models_catalog.py  test_opencode_config.py  test_redaction.py  test_session_brief.py  test_session_persistence.py  test_settings.py  test_standing_self_continuity.py  test_temporal.py  test_tenancy.py  test_tools.py  test_tools_composio.py  test_universal_curation.py  (+2 more)
shell/src-tauri/: Cargo.toml  tauri.conf.json
(+81 files in other folders)
