[package]
name = "centri-shell"
version = "0.1.0"
description = "CENTRI desktop shell"
authors = ["CENTRI"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "centri_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
